// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with more than one versions 1`] = `
<div>
  <div
    class="lg:cell-10 md:cell-9 cell-12"
  >
    <div
      class="bg-lightGrey p-8 flex justify-between"
    >
      <p
        class="FileInfo--Title"
      >
        Versions
        <span
          class="font-light ml-4"
        >
          (
          4
          )
        </span>
      </p>
      <label
        class="FileVersionList--Button"
      >
        <svg
          class="mr-4"
          height="14"
          viewBox="0 0 640 512"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M537.6 226.6c4.1-10.7 6.4-22.4 6.4-34.6 0-53-43-96-96-96-19.7 0-38.1 6-53.3 16.2C367 64.2 315.3 32 256 32c-88.4 0-160 71.6-160 160 0 2.7.1 5.4.2 8.1C40.2 219.8 0 273.2 0 336c0 79.5 64.5 144 144 144h368c70.7 0 128-57.3 128-128 0-61.9-44-113.6-102.4-125.4zM393.4 288H328v112c0 8.8-7.2 16-16 16h-48c-8.8 0-16-7.2-16-16V288h-65.4c-14.3 0-21.4-17.2-11.3-27.3l105.4-105.4c6.2-6.2 16.4-6.2 22.6 0l105.4 105.4c10.1 10.1 2.9 27.3-11.3 27.3z"
          />
        </svg>
        UPLOAD VERSION
        <input
          class="hidden"
          type="file"
        />
      </label>
    </div>
    <ul
      class="FileVersionList"
    >
      <li
        class="FileVersionList--Element"
      >
        <svg
          class="mx-16"
          height="12"
          viewBox="0 0 94 94"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <title>
            icon-error
          </title>
          <g
            data-name="Layer 1"
            id="Layer_1"
          >
            <circle
              cx="47"
              cy="47"
              fill="#fff"
              r="43"
            />
            <path
              d="M47,94A47,47,0,1,1,94,47,47,47,0,0,1,47,94ZM47,8A39,39,0,1,0,86,47,39,39,0,0,0,47,8Z"
              fill="#e45562"
              transform="translate(0 0)"
            />
            <path
              d="M59.83,64.07a4.25,4.25,0,0,1-3-1.26L47,53.05,37.2,62.83a4.32,4.32,0,0,1-6.05,0,4.26,4.26,0,0,1,0-6L41,47l-9.79-9.8a4.3,4.3,0,0,1,0-6.05,4.38,4.38,0,0,1,6.07,0L47.06,41l9.7-9.65a4.3,4.3,0,0,1,6,0,4.24,4.24,0,0,1,0,6.05L53.11,47l9.74,9.74a4.3,4.3,0,0,1,0,6.06,4.25,4.25,0,0,1-3,1.26Zm-1-30.75h0Z"
              fill="#e45562"
              transform="translate(0 0)"
            />
          </g>
        </svg>
        <button
          class="FileVersionElement--button w-24"
        >
          Latest
        </button>
        <span
          class="FileVersionElement--button FileVersionList--hidden w-12"
        >
          <button>
            <svg
              height="10"
              id="mock-icon"
              kind="copy"
              width="10"
            >
              <title>
                icon-
                copy
              </title>
            </svg>
          </button>
        </span>
        <div
          class="Avatar inline-block mr-8 hidden"
          style="height: 20px; width: 20px;"
        >
          <img
            alt="null avatar"
            class="Avatar-img"
            src="https://www.w3schools.com/css/img_avatar.png"
          />
        </div>
        <time
          class="FileVersionList--text w-32"
          datetime="2019-05-16T15:13:02.090Z"
          title="2019-05-16T15:13:02.090275+00:00"
        >
          3 weeks from now
        </time>
        <p
          class="FileVersionList--text w-16 hidden"
        >
          .jpg
        </p>
        <p
          class="FileVersionList--text w-24"
        >
          61.0 kB
        </p>
        <div
          class="flex"
        >
          <div
            class="FileVersionList--icon"
          >
            <svg
              height="12"
              id="mock-icon"
              kind="settings"
              width="12"
            >
              <title>
                icon-
                settings
              </title>
            </svg>
          </div>
          <p
            class="FileVersionList--text my-0 w-48"
          >
            Other
          </p>
        </div>
        <button>
          <svg
            class="FileVersionList--hidden w-12"
            height="12"
            id="mock-icon"
            kind="download"
            width="12"
          >
            <title>
              icon-
              download
            </title>
          </svg>
        </button>
      </li>
      <li
        class="FileVersionList--Element"
      >
        <svg
          class="mx-16"
          height="12"
          viewBox="0 0 94 94"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <title>
            icon-error
          </title>
          <g
            data-name="Layer 1"
            id="Layer_1"
          >
            <circle
              cx="47"
              cy="47"
              fill="#fff"
              r="43"
            />
            <path
              d="M47,94A47,47,0,1,1,94,47,47,47,0,0,1,47,94ZM47,8A39,39,0,1,0,86,47,39,39,0,0,0,47,8Z"
              fill="#e45562"
              transform="translate(0 0)"
            />
            <path
              d="M59.83,64.07a4.25,4.25,0,0,1-3-1.26L47,53.05,37.2,62.83a4.32,4.32,0,0,1-6.05,0,4.26,4.26,0,0,1,0-6L41,47l-9.79-9.8a4.3,4.3,0,0,1,0-6.05,4.38,4.38,0,0,1,6.07,0L47.06,41l9.7-9.65a4.3,4.3,0,0,1,6,0,4.24,4.24,0,0,1,0,6.05L53.11,47l9.74,9.74a4.3,4.3,0,0,1,0,6.06,4.25,4.25,0,0,1-3,1.26Zm-1-30.75h0Z"
              fill="#e45562"
              transform="translate(0 0)"
            />
          </g>
        </svg>
        <button
          class="FileVersionElement--button w-24"
        >
          FV_NVF2M1V9
        </button>
        <span
          class="FileVersionElement--button FileVersionList--hidden w-12"
        >
          <button>
            <svg
              height="10"
              id="mock-icon"
              kind="copy"
              width="10"
            >
              <title>
                icon-
                copy
              </title>
            </svg>
          </button>
        </span>
        <div
          class="Avatar inline-block mr-8 hidden"
          style="height: 20px; width: 20px;"
        >
          <img
            alt="null avatar"
            class="Avatar-img"
            src="https://www.w3schools.com/css/img_avatar.png"
          />
        </div>
        <time
          class="FileVersionList--text w-32"
          datetime="2019-05-16T15:12:58.888Z"
          title="2019-05-16T15:12:58.888683+00:00"
        >
          3 weeks from now
        </time>
        <p
          class="FileVersionList--text w-16 hidden"
        >
          .jpg
        </p>
        <p
          class="FileVersionList--text w-24"
        >
          75.5 kB
        </p>
        <div
          class="flex"
        >
          <div
            class="FileVersionList--icon"
          >
            <svg
              height="12"
              id="mock-icon"
              kind="settings"
              width="12"
            >
              <title>
                icon-
                settings
              </title>
            </svg>
          </div>
          <p
            class="FileVersionList--text my-0 w-48"
          >
            Other
          </p>
        </div>
        <button>
          <svg
            class="FileVersionList--hidden w-12"
            height="12"
            id="mock-icon"
            kind="download"
            width="12"
          >
            <title>
              icon-
              download
            </title>
          </svg>
        </button>
      </li>
      <li
        class="FileVersionList--Element"
      >
        <svg
          class="mx-16"
          height="12"
          viewBox="0 0 94 94"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <title>
            icon-error
          </title>
          <g
            data-name="Layer 1"
            id="Layer_1"
          >
            <circle
              cx="47"
              cy="47"
              fill="#fff"
              r="43"
            />
            <path
              d="M47,94A47,47,0,1,1,94,47,47,47,0,0,1,47,94ZM47,8A39,39,0,1,0,86,47,39,39,0,0,0,47,8Z"
              fill="#e45562"
              transform="translate(0 0)"
            />
            <path
              d="M59.83,64.07a4.25,4.25,0,0,1-3-1.26L47,53.05,37.2,62.83a4.32,4.32,0,0,1-6.05,0,4.26,4.26,0,0,1,0-6L41,47l-9.79-9.8a4.3,4.3,0,0,1,0-6.05,4.38,4.38,0,0,1,6.07,0L47.06,41l9.7-9.65a4.3,4.3,0,0,1,6,0,4.24,4.24,0,0,1,0,6.05L53.11,47l9.74,9.74a4.3,4.3,0,0,1,0,6.06,4.25,4.25,0,0,1-3,1.26Zm-1-30.75h0Z"
              fill="#e45562"
              transform="translate(0 0)"
            />
          </g>
        </svg>
        <button
          class="FileVersionElement--button w-24"
        >
          FV_KXMGAKK4
        </button>
        <span
          class="FileVersionElement--button FileVersionList--hidden w-12"
        >
          <button>
            <svg
              height="10"
              id="mock-icon"
              kind="copy"
              width="10"
            >
              <title>
                icon-
                copy
              </title>
            </svg>
          </button>
        </span>
        <div
          class="Avatar inline-block mr-8 hidden"
          style="height: 20px; width: 20px;"
        >
          <img
            alt="null avatar"
            class="Avatar-img"
            src="https://www.w3schools.com/css/img_avatar.png"
          />
        </div>
        <time
          class="FileVersionList--text w-32"
          datetime="2019-05-16T15:12:55.598Z"
          title="2019-05-16T15:12:55.598416+00:00"
        >
          3 weeks from now
        </time>
        <p
          class="FileVersionList--text w-16 hidden"
        >
          .jpg
        </p>
        <p
          class="FileVersionList--text w-24"
        >
          63.0 kB
        </p>
        <div
          class="flex"
        >
          <div
            class="FileVersionList--icon"
          >
            <svg
              height="12"
              id="mock-icon"
              kind="settings"
              width="12"
            >
              <title>
                icon-
                settings
              </title>
            </svg>
          </div>
          <p
            class="FileVersionList--text my-0 w-48"
          >
            Other
          </p>
        </div>
        <button>
          <svg
            class="FileVersionList--hidden w-12"
            height="12"
            id="mock-icon"
            kind="download"
            width="12"
          >
            <title>
              icon-
              download
            </title>
          </svg>
        </button>
      </li>
      <li
        class="FileVersionList--Element"
      >
        <svg
          class="mx-16"
          height="12"
          viewBox="0 0 94 94"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <title>
            icon-error
          </title>
          <g
            data-name="Layer 1"
            id="Layer_1"
          >
            <circle
              cx="47"
              cy="47"
              fill="#fff"
              r="43"
            />
            <path
              d="M47,94A47,47,0,1,1,94,47,47,47,0,0,1,47,94ZM47,8A39,39,0,1,0,86,47,39,39,0,0,0,47,8Z"
              fill="#e45562"
              transform="translate(0 0)"
            />
            <path
              d="M59.83,64.07a4.25,4.25,0,0,1-3-1.26L47,53.05,37.2,62.83a4.32,4.32,0,0,1-6.05,0,4.26,4.26,0,0,1,0-6L41,47l-9.79-9.8a4.3,4.3,0,0,1,0-6.05,4.38,4.38,0,0,1,6.07,0L47.06,41l9.7-9.65a4.3,4.3,0,0,1,6,0,4.24,4.24,0,0,1,0,6.05L53.11,47l9.74,9.74a4.3,4.3,0,0,1,0,6.06,4.25,4.25,0,0,1-3,1.26Zm-1-30.75h0Z"
              fill="#e45562"
              transform="translate(0 0)"
            />
          </g>
        </svg>
        <button
          class="FileVersionElement--button w-24"
        >
          FV_MGG87VHC
        </button>
        <span
          class="FileVersionElement--button FileVersionList--hidden w-12"
        >
          <button>
            <svg
              height="10"
              id="mock-icon"
              kind="copy"
              width="10"
            >
              <title>
                icon-
                copy
              </title>
            </svg>
          </button>
        </span>
        <div
          class="Avatar inline-block mr-8 hidden"
          style="height: 20px; width: 20px;"
        >
          <img
            alt="null avatar"
            class="Avatar-img"
            src="https://www.w3schools.com/css/img_avatar.png"
          />
        </div>
        <time
          class="FileVersionList--text w-32"
          datetime="2019-05-16T14:33:58.284Z"
          title="2019-05-16T14:33:58.284296+00:00"
        >
          3 weeks from now
        </time>
        <p
          class="FileVersionList--text w-16 hidden"
        >
          .jpg
        </p>
        <p
          class="FileVersionList--text w-24"
        >
          35.6 kB
        </p>
        <div
          class="flex"
        >
          <div
            class="FileVersionList--icon"
          >
            <svg
              height="12"
              id="mock-icon"
              kind="settings"
              width="12"
            >
              <title>
                icon-
                settings
              </title>
            </svg>
          </div>
          <p
            class="FileVersionList--text my-0 w-48"
          >
            Other
          </p>
        </div>
        <button>
          <svg
            class="FileVersionList--hidden w-12"
            height="12"
            id="mock-icon"
            kind="download"
            width="12"
          >
            <title>
              icon-
              download
            </title>
          </svg>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`renders with only one version 1`] = `
<div>
  <div
    class="lg:cell-10 md:cell-9 cell-12"
  >
    <div
      class="bg-lightGrey p-8 flex justify-between"
    >
      <p
        class="FileInfo--Title"
      >
        Versions
        <span
          class="font-light ml-4"
        >
          (
          1
          )
        </span>
      </p>
      <label
        class="FileVersionList--Button"
      >
        <svg
          class="mr-4"
          height="14"
          viewBox="0 0 640 512"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M537.6 226.6c4.1-10.7 6.4-22.4 6.4-34.6 0-53-43-96-96-96-19.7 0-38.1 6-53.3 16.2C367 64.2 315.3 32 256 32c-88.4 0-160 71.6-160 160 0 2.7.1 5.4.2 8.1C40.2 219.8 0 273.2 0 336c0 79.5 64.5 144 144 144h368c70.7 0 128-57.3 128-128 0-61.9-44-113.6-102.4-125.4zM393.4 288H328v112c0 8.8-7.2 16-16 16h-48c-8.8 0-16-7.2-16-16V288h-65.4c-14.3 0-21.4-17.2-11.3-27.3l105.4-105.4c6.2-6.2 16.4-6.2 22.6 0l105.4 105.4c10.1 10.1 2.9 27.3-11.3 27.3z"
          />
        </svg>
        UPLOAD VERSION
        <input
          class="hidden"
          type="file"
        />
      </label>
    </div>
    <ul
      class="FileVersionList"
    >
      <li
        class="FileVersionList--Element"
      >
        <svg
          class="mx-16"
          height="12"
          viewBox="0 0 94 94"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <title>
            icon-error
          </title>
          <g
            data-name="Layer 1"
            id="Layer_1"
          >
            <circle
              cx="47"
              cy="47"
              fill="#fff"
              r="43"
            />
            <path
              d="M47,94A47,47,0,1,1,94,47,47,47,0,0,1,47,94ZM47,8A39,39,0,1,0,86,47,39,39,0,0,0,47,8Z"
              fill="#e45562"
              transform="translate(0 0)"
            />
            <path
              d="M59.83,64.07a4.25,4.25,0,0,1-3-1.26L47,53.05,37.2,62.83a4.32,4.32,0,0,1-6.05,0,4.26,4.26,0,0,1,0-6L41,47l-9.79-9.8a4.3,4.3,0,0,1,0-6.05,4.38,4.38,0,0,1,6.07,0L47.06,41l9.7-9.65a4.3,4.3,0,0,1,6,0,4.24,4.24,0,0,1,0,6.05L53.11,47l9.74,9.74a4.3,4.3,0,0,1,0,6.06,4.25,4.25,0,0,1-3,1.26Zm-1-30.75h0Z"
              fill="#e45562"
              transform="translate(0 0)"
            />
          </g>
        </svg>
        <button
          class="FileVersionElement--button w-24"
        >
          Latest
        </button>
        <span
          class="FileVersionElement--button FileVersionList--hidden w-12"
        >
          <button>
            <svg
              height="10"
              id="mock-icon"
              kind="copy"
              width="10"
            >
              <title>
                icon-
                copy
              </title>
            </svg>
          </button>
        </span>
        <div
          class="Avatar inline-block mr-8 hidden"
          style="height: 20px; width: 20px;"
        >
          <img
            alt="null avatar"
            class="Avatar-img"
            src="https://www.w3schools.com/css/img_avatar.png"
          />
        </div>
        <time
          class="FileVersionList--text w-32"
          datetime="2019-05-16T15:13:50.215Z"
          title="2019-05-16T15:13:50.215303+00:00"
        >
          3 weeks from now
        </time>
        <p
          class="FileVersionList--text w-16 hidden"
        >
          .jpg
        </p>
        <p
          class="FileVersionList--text w-24"
        >
          63.0 kB
        </p>
        <div
          class="flex"
        >
          <div
            class="FileVersionList--icon"
          >
            <svg
              height="12"
              id="mock-icon"
              kind="settings"
              width="12"
            >
              <title>
                icon-
                settings
              </title>
            </svg>
          </div>
          <p
            class="FileVersionList--text my-0 w-48"
          >
            Other
          </p>
        </div>
        <button>
          <svg
            class="FileVersionList--hidden w-12"
            height="12"
            id="mock-icon"
            kind="download"
            width="12"
          >
            <title>
              icon-
              download
            </title>
          </svg>
        </button>
      </li>
    </ul>
  </div>
</div>
`;
